--- a/my-library.html
+++ b/my-library.html
@@ -90,7 +90,84 @@
       </div>
 
       <!-- The Modal Team-Footer Window -->
-      
+      <div class="backdrop is-hidden" data-modal>
+        <div class="modal__window">
+          <button class="modal__close" data-modal-close>
+            <img width="30" src="./images/close.svg" alt="close button" />
+          </button>
+          <ul class="modal__team-list">
+            <li class="modal__item">
+              <img
+                class="modal__img"
+                src="./images/team/tomasz.jpg"
+                alt="Tomasz"
+                width="100"
+                height="100"
+              />
+              <h3 class="modal__name">Tomasz Sokół</h3>
+              <p class="modal__description">Team Leader</p>
+              <a
+                class="modal__link"
+                href="https://github.com/tomeksokol"
+                target="_blank"
+                ><img
+                  class="modal__git"
+                  src="./images/github.svg"
+                  alt="git logo"
+                  width="12"
+                  height="12"
+                />github</a
+              >
+            </li>
+            <li class="modal__item">
+              <img
+                class="modal__img"
+                src="./images/team/michal.jpg"
+                alt="Michał"
+                width="100"
+                height="100"
+              />
+              <h3 class="modal__name">Michał Balicki</h3>
+              <p class="modal__description">Team member</p>
+              <a
+                class="modal__link"
+                href="https://github.com/MichalBielicki"
+                target="_blank"
+                ><img
+                  class="modal__git"
+                  src="./images/github.svg"
+                  alt="git logo"
+                  width="12"
+                  height="12"
+                />github</a
+              >
+            </li>
+            <li class="modal__item">
+              <img
+                class="modal__img"
+                src="./images/team/patrycja.jpg"
+                alt="Patrycja"
+                width="100"
+                height="100"
+              />
+              <h3 class="modal__name">Patrycja Nowakowska</h3>
+              <p class="modal__description">Team member</p>
+              <a
+                class="modal__link"
+                href="https://github.com/PatrycjaNowakowska"
+                target="_blank"
+                ><img
+                  class="modal__git"
+                  src="./images/github.svg"
+                  alt="git logo"
+                  width="12"
+                  height="12"
+                />github</a
+              >
+            </li>
+          </ul>
+        </div>
+      </div>
     </footer>
 
     <!-- The Modal Movie Cart-->
